# Rag-Chatbot

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pydocstyle  .pytest.ini  Dockerfile  Makefile  PROJECT_KNOWLEDGE_BASE.md  README.md  README_API_USAGE.md  README_NANOBANANA_WORKFLOW.md  catalog-info.yaml  env-variables.md  logging_config.json  mkdocs.yml  multi_worker_start.py  openapi.json  pyproject.toml  rules.md  run_streamlit.py  simple_db_test.py  sonar-project.properties  start_multi_workers.sh  streamlit_app.py  streamlit_image_generation.py
.gitlab/: changelog_config.yml
ci/: custom_helm_deployment_rules.yaml  helm.yml  test_env_dev.yml  test_env_variables.yml
configs/: __init__.py  app_config.py  chromadb_telemetry_fix.py
docs/: AIP-CSV-FIX-DOCUMENTATION.md  CHAT_WITH_CSV_LOGICAL_FLOW.md  CUSTOM_GPT_API_INTEGRATION.md  CUSTOM_GPT_README.md  ERROR_CODES_QUICK_REFERENCE.md  MULTI_TABULAR_CHAT_IMPLEMENTATION.md  README_API_USAGE.md  README_CHAT_WITH_ANTHROPIC_POSTMAN.md  README_CHAT_WITH_MULTIPLE_FILES.md  README_CHAT_WITH_MULTI_URL_POSTMAN.md  README_CHAT_WITH_PDF.md  README_CHAT_WITH_TABULAR.md  anthropic-integration.md  async-parallel-embedding-guide.md  auto-migration-guide.md  chromadb-manager-guide.md  cleanup-workflow.md  csv-workflow-readme.md  custom-gpt-creator.md  default-embedding-configuration.md  embedding-workflow.md  error-handling-guide.md  image-history-management.md  image_generation.md  image_generation_api.md  index.md  legacy-embedding-migration.md  quick-test-reference.md  streamlit-error-display-examples.md  testing-multi-file-upload-guide.md
examples/: test-gpt-5.py
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: pod-disruption-budget.yaml  serviceaccount.yaml
helm/values/: dev.yaml  preprod.yaml  prod.yaml
rag_pdf_api/: __init__.py  __main__.py  app.py
rag_pdf_api/chatbot/: chatbot_creator.py  gcs_handler.py
rag_pdf_api/common/: embeddings.py  vector_db_creator.py
rtl_rag_chatbot_api/: __main__.py  app.py  test_temp.py
rtl_rag_chatbot_api/chatbot/: __init__.py  anthropic_handler.py  auto_migration_service.py  chart_generator.py  chatbot_creator.py  combined_image_handler.py  confluence_handler.py  csv_handler.py  custom_gpt_handler.py  dalle_handler.py  data_visualization.py  embedding_handler.py  file_handler.py  file_handler_helper.py  gcs_handler.py  gemini_handler.py  image_reader.py  imagen_handler.py  migration_handler.py  model_handler.py  nanobanana_handler.py  older_imagen_handler.py  parallel_embedding_creator.py  prompt_handler.py  sharepoint_handler.py  unified_db_builder.py  website_handler.py
rtl_rag_chatbot_api/chatbot/utils/: encryption.py  file_encryption_manager.py  image_prompt_rewriter.py  language_detector.py  prompt_builder.py  prompt_enhancer.py  vertexai_common.py
rtl_rag_chatbot_api/common/: base_handler.py  chroma_manager.py  cleanup_coordinator.py  db.py  embeddings.py  encryption_utils.py  errors.py  models.py  multimodal_processor.py  prepare_sqlitedb_from_csv_xlsx.py  prompts_storage.py  retry_utils.py  scheduled_tasks.py  text_extractor.py  vector_db_creator.py
rtl_rag_chatbot_api/oauth/: construct_rsa_key.py  get_current_user.py  get_public_key.py
rtl_rag_chatbot_api/tabularData/: __init__.py  csv_handler.py  prepare_sqlitedb_from_csv_xlsx.py
scripts/: replace_username_for_fileids.py
streamlit_components/: __init__.py  custom_gpt_creator.py  custom_gpt_prompts.py
tests/: __init__.py  api_unit_tests.py  conftest.py  delete_test_embeddings.py  old_test_api_unit.py  test_api.py  test_api_advanced.py  test_api_unit.py  test_app.py  test_gcs_handler.py  test_resources.py  test_utils.py
tests/load_tests/: chat.py  helpers.py  locustfile.py
tests/manual/: anthropic_test.py  copy_emb_prod_to_dev.py  simple_gpt5_test.py  test-gpt-5.py  test_azure_responses_api.py  test_gpt5.1.py  test_gpt5.py  test_nanobanana.py
tests/mock_files/: mock_txt.txt
tests/oauth/: test_get_current_user.py
tests/resources/: chat-pdf.prompts.txt
tests/scheduler/: test_scheduler.py
tests/workflows/: test-data.sql  test_helpers.py  test_msgraph.py  test_test_database.py  test_workflow_anonymise_prompts.py  test_workflow_delete_embeddings.py  test_workflow_delete_prompts.py  test_workflow_delete_user_data.py  test_workflow_mark_deletion_candidates.py  test_workflows.py
version_doc/: confluence_page_updater.py  last_updated_commit.txt  version_logger.py
workflows/: __init__.py  app_config.py  msgraph.py  schema-generator.py  workflow.py
workflows/db/: helpers.py  models.py  tables.py
workflows/gcs/: helpers.py
workflows/resources/: schema.prisma  tables_imports.txt
