[tool.poetry]
name = "rtl_rag_chatbot_api"
version = "1.0.0"
description = "rtl-rag-chatbot-api"
authors = []
readme = 'README.md'

[[tool.poetry.source]]
name = "python-packages"
url = "https://gitlab.com/api/v4/projects/42761560/packages/pypi/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = ">=0.7.0"
streamlit = "^1.29.0"
langchain = "^0.1.20"
openai = "^1.3.7"
chromadb = "^0.4.24"
tiktoken = "^0.5.2"
google-cloud-storage = "^2.13.0"
azureopenai = "^0.0.1"
pillow = "^10.1.0"
types-requests = "^2.31.0.20240218"
llama-index = "^0.10.41"
llama-index-embeddings-azure-openai = "^0.1.9"
llama-index-llms-azure-openai = "^0.1.8"
llama-index-vector-stores-chroma = "^0.1.8"
pydantic-settings = "^2.2.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.1"
starlette-exporter = "^0.21.0"
langchain-google-vertexai = "^0.1.2"
langchain-openai = "^0.1.6"

matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pandas = "^1.5.3"
plotly = "^5.18.0"
kaleido = "0.4.0rc5"



cryptography = "^43.0.0"
python-multipart = "^0.0.9"
google-cloud-aiplatform = "^1.63.0"
pypdf2 = "^3.0.1"
pdfminer-six = "^20240706"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
nltk = "^3.9.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
python-jose = "^3.3.0"
requests = "^2.32.3"
apscheduler = "^3.10.4"
azure-ai-textanalytics = "^5.3.0"
azure-identity = "^1.19.0"
azure-core = "^1.31.0"
azureml-core = "^1.58.0"
aiofiles = "^23.1.0"
python-docx = "0.8.11"

openpyxl = "^3.1.5"
playwright = "^1.51.0"
unstructured = "^0.17.2"
weasyprint = "^65.0"
selenium = "^4.30.0"
webdriver-manager = "^4.0.2"
trafilatura = "^1.6.2"
[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-sugar = "^0.9.4"
httpx = "^0.26.0"
isort = "^5.10.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message",
    "ignore::UserWarning:pydantic._internal._fields",
    "ignore::pydantic.PydanticDeprecatedSince20",
    "ignore:Type google._upb._message.MessageMapContainer uses PyType_Spec:DeprecationWarning",
    "ignore:Type google._upb._message.ScalarMapContainer uses PyType_Spec:DeprecationWarning",

]

[tool.poetry.scripts]
start = "rtl_rag_chatbot_api.app:start"
streamlit = "run_streamlit:run"

[tool.coverage.run]
source = ["rtl_rag_chatbot_api"]
